# Drone-Calibration

./: ProjectDescription.md  README.md
.github/: pull_request_template.md
.github/workflows/: verify.yml
drone-ui/ui/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
drone-ui/ui/coverage/: index.html
drone-ui/ui/src/: App.jsx  App.test.jsx  CameraFeed.jsx  CameraSettings.jsx  PathPlanner.jsx  PathPlanner3D.jsx  RecordedPaths.jsx  RecordedVideos.jsx  index.css
qt-drone-ui/: .gitignore  CMakeLists.txt  README.md  build.bat  run.bat
qt-drone-ui/src/: main.cpp  mainwindow.cpp  mainwindow.h
qt-drone-ui/src/controllers/: dronecontroller.cpp  dronecontroller.h
qt-drone-ui/src/models/: flightpath.cpp  flightpath.h  recording.cpp  recording.h  waypoint.cpp  waypoint.h
qt-drone-ui/src/network/: voxlconnection.cpp  voxlconnection.h
qt-drone-ui/src/utils/: settings.cpp  settings.h
qt-drone-ui/src/widgets/: camerafeedwidget.cpp  camerafeedwidget.h  dronestatuswidget.cpp  dronestatuswidget.h  pathplannerwidget.cpp  pathplannerwidget.h  recordedpathswidget.cpp  recordedpathswidget.h  recordedvideoswidget.cpp  recordedvideoswidget.h
sports-data-metric-client/: .gitignore  CMakeLists.txt  LICENSE  README.md  debug.bat  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  release.bat  resource.qrc
sports-data-metric-client/docs/diagrams/: umlSequenceDiagram.mmd
sports-data-metric-client/src/assets/css/: client.css
sports-data-metric-client/src/assets/html/: report.html
sports-data-metric-client/src/assets/json/: Rigid_Body_01.json  Rigid_Body_02_Simple_Move.json  Rigid_Body_03_Simple_Rotation.json
sports-data-metric-client/src/config/: sports.json
sports-data-metric-client/src/connection/: connection_controller.cpp  connection_controller.h  natnet_connection.cpp  natnet_connection.h
sports-data-metric-client/src/controllers/: configurecontroller.cpp  configurecontroller.h  metricscontroller.cpp  metricscontroller.h  metricsmanager.cpp  metricsmanager.h  reportgenerator.cpp  reportgenerator.h  settings.h  streamingcontroller.cpp  streamingcontroller.h  toggles.cpp  toggles.h  uifactory.cpp  uifactory.h
sports-data-metric-client/src/data/: data_processor.cpp  data_processor.h  frame_data.h  metrics_data.h  replay_controller.cpp  replay_controller.h  rigid_body_metrics.cpp  rigid_body_metrics.h  skeleton_config.json  skeleton_metrics.cpp  skeleton_metrics.h
sports-data-metric-client/src/rendering/: fshader.glsl  glwidget.cpp  glwidget.h  mesh.cpp  mesh.h  meshGenerator.cpp  meshGenerator.h  models.qrc  vshader.glsl
sports-data-metric-client/src/utils/: fileutils.cpp  fileutils.h  uiutils.cpp  uiutils.h
sports-data-metric-client/src/widgets/: graphwidget.cpp  graphwidget.h
